--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
   line-height: 40px;
 }
 
-.education__inner .education__text, .languages__text, .experience .project__text, .experience .experience__text, .skills__item .skills__item-text, .about__text {
+.education__inner .education__text, .languages__text, .project__text, .skills__item .skills__item-text, .about__text {
   color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
@@ -36,7 +36,9 @@ html {
   scroll-behavior: smooth;
 }
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: inherit;
   margin: 0;
 }
@@ -49,7 +51,9 @@ a {
   text-decoration: none;
 }
 
-ul, li, ol {
+ul,
+li,
+ol {
   padding: 0;
   list-style: none;
 }
@@ -202,6 +206,8 @@ h1.avatar__hi {
   align-items: center;
   justify-content: space-around;
   flex-direction: row;
+  flex-wrap: wrap;
+  gap: 15px;
 }
 
 .skills__item {
@@ -234,28 +240,29 @@ h1.avatar__hi {
   background-color: #fff;
   margin: 15px auto 0;
 }
-.experience .experience__title {
+
+.experience__title {
   margin-bottom: 30px;
 }
-.experience .experience__text {
-  margin-bottom: 20px;
+
+.projects {
   margin-left: 50px;
 }
-.experience .project__travel {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.experience .project__momentum {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.experience .project__link {
+
+.project__link {
   display: block;
-  position: relative;
+  font-size: 36px;
+  color: #fff;
+  transition: all 300ms ease;
 }
-.experience .project__text {
+.project__link:hover {
+  text-decoration: underline;
+}
+.project__link:active {
+  color: red;
+}
+
+.project__text {
   position: absolute;
   top: 35%;
   left: 7%;
@@ -263,20 +270,23 @@ h1.avatar__hi {
   z-index: 5;
   line-height: 30px;
 }
-.experience .travel {
+
+.travel {
   background: url(../images/travel.jpg) no-repeat;
   background-size: cover;
   width: 865px;
   height: 513px;
 }
-.experience .momentum {
+
+.momentum {
   background: url(../images/momentum.jpg) no-repeat;
   background-size: cover;
   width: 865px;
   height: 513px;
   margin-bottom: 15px;
 }
-.experience .project__img::before {
+
+.project__img::before {
   content: "";
   display: block;
   background: #000;
@@ -340,21 +350,6 @@ h1.avatar__hi {
   margin-left: 50px;
 }
 
-.code-example {
-  margin-bottom: 50px;
-}
-
-.code-example__box {
-  background-color: #404040;
-  width: 365px;
-  margin-left: 50px;
-}
-
-.code-example__title {
-  margin-top: 60px;
-  margin-bottom: 30px;
-}
-
 .footer {
   background-color: #282828;
 }
@@ -375,4 +370,4 @@ h1.avatar__hi {
   color: #000;
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=main.css.map */
