--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,20 +5,24 @@ html {
     scroll-behavior: smooth;
 }
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
     box-sizing: inherit;
     margin: 0;
 }
 
-body{
+body {
     background-color: #363636;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-ul, li, ol {
+ul,
+li,
+ol {
     padding: 0;
     list-style: none;
 }
@@ -38,7 +42,7 @@ ul, li, ol {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: solid 5px rgb(186, 22, 50); 
+    border: solid 5px rgb(186, 22, 50);
     cursor: pointer;
     position: fixed;
     bottom: 10%;
@@ -50,7 +54,7 @@ ul, li, ol {
     animation-iteration-count: infinite;
     animation-direction: alternate;
     box-shadow: 0px 0px 15px 2px #000;
-    
+
     .fa-angles-up {
         color: rgb(186, 22, 50);
     }
@@ -66,7 +70,7 @@ ul, li, ol {
     }
 }
 
-.button-top--activ{
+.button-top--activ {
     visibility: visible;
 }
 
@@ -114,8 +118,6 @@ ul, li, ol {
 }
 
 
-
-
 .avatar {
     margin-bottom: 100px;
 }
@@ -128,7 +130,7 @@ ul, li, ol {
     justify-items: center;
 }
 
-.avatar-img__box{
+.avatar-img__box {
     grid-column: 1 / 2;
     grid-row: 1 / 4;
 }
@@ -142,7 +144,7 @@ h1.avatar__hi {
     line-height: 50px;
 }
 
-.avatar__hi{
+.avatar__hi {
     @extend %title;
     grid-column: 2 / 4;
     grid-row: 2 / 3;
@@ -155,7 +157,7 @@ h1.avatar__hi {
     align-self: flex-start;
     text-align: center;
 
-    .about__text + .about__text {
+    .about__text+.about__text {
         margin-top: 15px;
     }
 }
@@ -168,7 +170,7 @@ h1.avatar__hi {
     @extend %title;
 }
 
-.skills{
+.skills {
     margin-bottom: 60px;
 
     &::after {
@@ -191,6 +193,8 @@ h1.avatar__hi {
     align-items: center;
     justify-content: space-around;
     flex-direction: row;
+    flex-wrap: wrap;
+    gap: 15px;
 }
 
 .skills__item {
@@ -198,15 +202,14 @@ h1.avatar__hi {
     align-items: center;
     justify-content: center;
 
-    .skills__item-wrapper{
+    .skills__item-wrapper {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: row;
-        
     }
 
-    .skills__item-text{
+    .skills__item-text {
         @extend %about__text;
     }
 
@@ -217,82 +220,76 @@ h1.avatar__hi {
     }
 }
 
-.skills__item-wrapper + .skills__item-wrapper{
+.skills__item-wrapper+.skills__item-wrapper {
     margin-left: 15px;
 }
 
-.experience{
 
-    &::after {
-        content: '';
-        display: block;
-        width: 95%;
-        text-align: center;
-        height: 2px;
-        background-color: #fff;
-        margin: 15px auto 0;
+.experience::after {
+    content: '';
+    display: block;
+    width: 95%;
+    text-align: center;
+    height: 2px;
+    background-color: #fff;
+    margin: 15px auto 0;
+}
+
+.experience__title {
+    margin-bottom: 30px;
+}
+
+.projects {
+    margin-left: 50px;
+}
+
+.project__link {
+    display: block;
+    font-size: 36px;
+    color: #fff;
+    transition: all 300ms ease;
+
+    &:hover {
+        text-decoration: underline;
     }
 
-    .experience__title {
-        margin-bottom: 30px;
+    &:active {
+        color: red;
     }
+}
 
-    .experience__text {
-        @extend %about__text;
-        margin-bottom: 20px;
-        margin-left: 50px;
-    }
+.project__text {
+    position: absolute;
+    top: 35%;
+    left: 7%;
+    margin: 0 auto;
+    @extend %about__text;
+    z-index: 5;
+    line-height: 30px;
+}
 
-    .project__travel {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+.travel {
+    background: url(../images/travel.jpg) no-repeat;
+    background-size: cover;
+    width: 865px;
+    height: 513px;
+}
 
-    .project__momentum {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+.momentum {
+    background: url(../images/momentum.jpg) no-repeat;
+    background-size: cover;
+    width: 865px;
+    height: 513px;
+    margin-bottom: 15px;
+}
 
-    .project__link{
-        display: block;
-        position: relative;
-    }
-
-    .project__text{
-        position: absolute;
-        top: 35%;
-        left: 7%;
-        margin: 0 auto;
-        @extend %about__text;
-        z-index: 5;
-        line-height: 30px;
-    }
-
-    .travel {
-        background: url(../images/travel.jpg) no-repeat;
-        background-size: cover;
-        width: 865px;
-        height: 513px;
-    }
-
-    .momentum {
-        background: url(../images/momentum.jpg) no-repeat;
-        background-size: cover;
-        width: 865px;
-        height: 513px;
-        margin-bottom: 15px;
-    }
-
-    .project__img::before {
-        content: '';
-        display: block;
-        background: #000;
-        opacity: 0.7;
-        width: 100%;
-        height: 100%;
-    }
+.project__img::before {
+    content: '';
+    display: block;
+    background: #000;
+    opacity: 0.7;
+    width: 100%;
+    height: 100%;
 }
 
 .languages {
@@ -317,20 +314,20 @@ h1.avatar__hi {
     @extend %about__text;
 }
 
-.languages__text + .languages__text {
+.languages__text+.languages__text {
     margin-top: 15px;
 }
 
 .languages__wrap-text {
     display: flex;
     align-items: flex-start;
-    justify-content:center;
+    justify-content: center;
     flex-direction: column;
     margin-left: 50px;
     margin-bottom: 15px;
 }
 
-.education{
+.education {
     margin-top: 60px;
 
     &::after {
@@ -344,13 +341,13 @@ h1.avatar__hi {
     }
 }
 
-.education__inner{
+.education__inner {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
     margin-bottom: 25px;
-    
+
     .education__text {
         margin-top: 15px;
         margin-left: 50px;
@@ -358,33 +355,18 @@ h1.avatar__hi {
     }
 }
 
-.code-example{
-    margin-bottom: 50px;
-}
-
-.code-example__box{
-    background-color: #404040;
-    width: 365px;
-    margin-left: 50px;
-}
-
-.code-example__title{
-    margin-top: 60px;
-    margin-bottom: 30px;
-}
-
 .footer {
     background-color: #282828;
 }
 
-.footer__inner{
+.footer__inner {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     column-gap: 40px;
     height: 100px;
 
-    .footer__link > img {
+    .footer__link>img {
         width: 40%;
         height: auto;
     }
